# homelab-infra

./: .dockerignore  .gitignore  Makefile  Pulumi.yaml  __main__.py  pyproject.toml  requirements.txt
_command/: __init__.py  command.py
_common/: __init__.py  config.py  constant.py  import_module.py  naming.py
_common/aws/: __init__.py  aws.py  cleanup.py
_common/notification/: __init__.py  notification.py
_compose/: __init__.py  docker_compose.py
_compose/compose/: backup.py  telegram.py
_container/: __init__.py  container.py
_container/image/: get.py
_data/: resource.py
_data/docker/: __init__.py  label.py  volume.py
_data/docker_browser/: __init__.py  docker_browser.py  envs.py
_data/mariadb/: __init__.py  mariadb.py
_data/postgres/: __init__.py  postgres.py
_data/redis/: __init__.py  conf.py  redis.py
_file/: __init__.py
_file/file/: file.py
_image/: __init__.py  get.py  image.py
_network/: resource.py
_network/cloudflared/: __init__.py  cloudflared.py
_network/dns/: __init__.py  cloudflare.py  hostnames.py
_network/docker/: __init__.py  bridge.py
_network/security/: __init__.py
_network/tailscale/: __init__.py  tailscale.py  tailscale_cleanup_device.py
_network/traefik/: __init__.py  traefik.py
_network/vpn/: __init__.py  vpn.py
_network/wireguard/: __init__.py  config.py  wireguard.py
_secret/: __init__.py  resource.py  secret.py
_secret/keepass/: common.py
_service/: __init__.py  resource.py
_service/authelia/: authelia.py  configuration.py  users.py
_service/central_storage/: central_storage.py
(+127 files in other folders)
