[project]
name = "homelab-infra"
version = "0.1.0"
dependencies = [
    "argon2-cffi>=23.1.0, <24.0.0",
    "deepmerge>=1.1.0, <2.0.0",
    "docker[ssh]>=7.0.0, <8.0.0",
    "filelock>=3.13.1, <4.0.0",
    "httpx>=0.25.2, <1.0.0",
    "jsonschema>=4.20.0, <5.0.0",
    "pip>=24.0.0, <25.0.0",
    "pulumi>=3.0.0, <4.0.0",
    "pulumi-cloudflare>=5.30.0, <6.0.0",
    "pulumi-command>=0.11.1, <1.0.0",
    "pulumi-docker>=4.5.4, <5.0.0",
    "pulumi-random>=4.16.2, <5.0.0",
    "pulumi-tailscale>=0.16.0, <1.0.0",
    "pycryptodome>=3.19.0, <4.0.0",
    "pykeepass>=4.0.6, <5.0.0",
    "python-slugify>=8.0.1, <9.0.0",
    "pyyaml>=6.0.1, <7.0.0",
    "tomlkit>=0.12.3, <1.0.0",
]
requires-python = ">= 3.12"

[tool.rye]
use-uv = false
managed = true
virtual = true
dev-dependencies = []
